--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,17 @@
 body {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
-  color: deeppink;
+  color: black;
+}
+
+.container {
+  border: darkgray solid 2px;
+  display: block;
+  width: fit-content;
+  margin: 0 auto;
+  padding: 5%;
+}
+
+p {
+  text-align: left;
 }
