--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,11 +7,30 @@ body {
 .container {
   border: darkgray solid 2px;
   display: block;
-  width: fit-content;
+  width: 80%;
   margin: 0 auto;
-  padding: 5%;
+  padding: 0 0;
 }
 
-p {
+p,
+h1 {
   text-align: left;
+  padding: 2%;
+}
+
+#cabecera {
+  color: white;
+  background-color: teal;
+  text-align: left;
+  font-weight: 900;
+  font-size: xx-large;
+  margin: 0;
+  padding: 1% 2%;
+  box-shadow: 0px 2px 20px 0 rgba(0, 0, 0, 0.5);
+}
+
+.subtitulo {
+  font-size: medium;
+  font-weight: 600;
+  margin-left: 30px;
 }
